# scitercp

./: .gitignore  CMakeLists.txt  CredentialProviderSamples.sln  Makefile  README.md  conanfile.txt
cefpart/: simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  simple_handler_win.cc
helpers/: Helpers.vcxproj  pkce.cpp  pkce.h
samplewrapexistingcredentialprovider/: CMakeLists.txt  CSampleCredential.cpp  CSampleCredential.h  Makefile  Register.reg  SampleWrapExistingCredentialProvider.vcxproj  config.json
samplewrapexistingcredentialprovider/ui/: hello.css  hello.htm  hello.js  test.htm
subexe/: subprocess.cpp
subpartner/: CMakeLists.txt
